--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -48,6 +48,12 @@
       <groupId>com.tencent.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.tencent.spark</groupId>
@@ -135,6 +141,12 @@
           <groupId>com.tencent.spark</groupId>
           <artifactId>spark-yarn_${scala.binary.version}</artifactId>
           <version>${project.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.apache.hadoop</groupId>
+              <artifactId>*</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
       </dependencies>
     </profile>
