--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -91,6 +91,13 @@
       <artifactId>guava</artifactId>
       <scope>${hadoop.deps.scope}</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.tencent.tdw</groupId>
+      <artifactId>spark-toolkit_${scala.binary.version}</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
