--- a/common/network-common/pom.xml
+++ b/common/network-common/pom.xml
@@ -20,7 +20,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.spark</groupId>
+    <groupId>com.tencent.spark</groupId>
     <artifactId>spark-parent_2.12</artifactId>
     <version>3.0.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
@@ -93,7 +93,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.spark</groupId>
+      <groupId>com.tencent.spark</groupId>
       <artifactId>spark-tags_${scala.binary.version}</artifactId>
       <scope>test</scope>
    </dependency>
@@ -103,7 +103,7 @@
       them will yield errors.
     -->
     <dependency>
-      <groupId>org.apache.spark</groupId>
+      <groupId>com.tencent.spark</groupId>
       <artifactId>spark-tags_${scala.binary.version}</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
