--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>apache</artifactId>
     <version>18</version>
   </parent>
-  <groupId>org.apache.spark</groupId>
+  <groupId>com.tencent.spark</groupId>
   <artifactId>spark-parent_2.12</artifactId>
   <version>3.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -305,12 +305,12 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.apache.spark</groupId>
+        <groupId>com.tencent.spark</groupId>
         <artifactId>spark-tags_${scala.binary.version}</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.spark</groupId>
+        <groupId>com.tencent.spark</groupId>
         <artifactId>spark-tags_${scala.binary.version}</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
