--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
     <slf4j.version>1.7.16</slf4j.version>
     <log4j.version>1.2.17</log4j.version>
     <hadoop.version>2.7.4</hadoop.version>
+    <hadoop.minikdc.version>2.7.4</hadoop.minikdc.version>
     <protobuf.version>2.5.0</protobuf.version>
     <yarn.version>${hadoop.version}</yarn.version>
     <zookeeper.version>3.4.6</zookeeper.version>
@@ -1041,7 +1042,7 @@
       <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-minikdc</artifactId>
-        <version>${hadoop.version}</version>
+        <version>${hadoop.minikdc.version}</version>
         <scope>test</scope>
         <exclusions>
           <exclusion>
@@ -2983,6 +2984,7 @@
       <id>hadoop-2.2-tdw</id>
       <properties>
         <hadoop.version>2.2.0-tdw-0.2.270</hadoop.version>
+        <hadoop.minikdc.version>3.1.2</hadoop.minikdc.version>
         <protobuf.version>2.5.0</protobuf.version>
         <zookeeper.version>3.4.5</zookeeper.version>
         <curator.version>2.4.0</curator.version>
