--- a/pom.xml
+++ b/pom.xml
@@ -3006,6 +3006,14 @@
     </profile>
 
     <profile>
+      <id>hadoop-2.7.2-tdw</id>
+      <properties>
+        <hadoop.minikdc.version>2.7.2-tdw-1.3.0</hadoop.minikdc.version>
+        <jets3t.version>0.7.1</jets3t.version>
+      </properties>
+    </profile>
+
+    <profile>
       <id>hadoop-3.2</id>
       <properties>
         <hadoop.version>3.2.0</hadoop.version>
