[TASK-6836615] Update pom.xml with tencent repository --task=6836615

--- a/pom.xml
+++ b/pom.xml
@@ -259,8 +259,19 @@
   </properties>
   <repositories>
     <repository>
+      <id>tencent_repo</id>
+      <!-- This should be at top, it makes maven try the tencent repo first and then others and hence faster dep resolution -->
+      <name>Tencent Repository</name>
+      <url>http://maven.oa.com/nexus/content/groups/public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
       <id>central</id>
-      <!-- This should be at top, it makes maven try the central repo first and then others and hence faster dep resolution -->
       <name>Maven Repository</name>
       <url>https://repo.maven.apache.org/maven2</url>
       <releases>
