Change toolkit version to 3.12.2
(cherry picked from commit ec20b3cdbb93f6c5e8b8adbba57d256dec323e30)
Signed-off-by: colinma <colinma@tencent.com>

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -95,7 +95,7 @@
     <dependency>
       <groupId>com.tencent.tdw</groupId>
       <artifactId>spark-toolkit_${scala.binary.version}</artifactId>
-      <version>${project.version}</version>
+      <version>3.12.2</version>
     </dependency>
 
   </dependencies>
