[TASK-6871275] Update the branch name of submodule "tdw-spark-toolkit" for package with Tencent Spark --task=6871275

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "tdw-spark-toolkit"]
 	path = tdw-spark-toolkit
 	url = http://git.code.oa.com/tdw/tdw-spark-toolkit.git
-        branch = develop
+        branch = branch-tencent-spark
