--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -283,7 +283,7 @@
         <dependency>
           <groupId>com.tencent.tdw</groupId>
           <artifactId>spark-toolkit_${scala.binary.version}</artifactId>
-          <version>3.12.2</version>
+          <version>3.12.2-ts</version>
         </dependency>
       </dependencies>
     </profile>
