--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -285,6 +285,30 @@
           <artifactId>spark-toolkit_${scala.binary.version}</artifactId>
           <version>3.12.2-ts</version>
         </dependency>
+        <dependency>
+          <groupId>org.apache.calcite.avatica</groupId>
+          <artifactId>avatica-core</artifactId>
+          <version>${supersql.driver.version}</version>
+          <classifier>shaded</classifier>
+          <exclusions>
+            <exclusion>
+              <groupId>*</groupId>
+              <artifactId>*</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+        <dependency>
+          <groupId>com.tencent.tdw</groupId>
+          <artifactId>security-common</artifactId>
+          <version>${tdw.security.common.version}</version>
+          <classifier>shaded</classifier>
+          <exclusions>
+            <exclusion>
+              <groupId>*</groupId>
+              <artifactId>*</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
       </dependencies>
     </profile>
   </profiles>
