[story-858479339] Add audit log to TDBank when using SparkSession.sql --story=858479339

--- a/sql/hive/pom.xml
+++ b/sql/hive/pom.xml
@@ -180,6 +180,10 @@
       <artifactId>derby</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.tencent.tdbank</groupId>
+      <artifactId>TDBusSDK</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-compiler</artifactId>
       <scope>test</scope>
