--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,7 @@
     <htmlunit.version>2.22</htmlunit.version>
     <supersql.driver.version>1.16.0-SUPERSQL-SNAPSHOT</supersql.driver.version>
     <tdw.security.common.version>0.3.2</tdw.security.common.version>
+    <tdbussdk.version>1.2.9</tdbussdk.version>
     <!--
     Managed up from older version from Avro; sync with jackson-module-paranamer dependency version
     -->
@@ -2202,6 +2203,11 @@
         <artifactId>security-common</artifactId>
         <version>${tdw.security.common.version}</version>
         <classifier>shaded</classifier>
+      </dependency>
+      <dependency>
+        <groupId>com.tencent.tdbank</groupId>
+        <artifactId>TDBusSDK</artifactId>
+        <version>${tdbussdk.version}</version>
       </dependency>
       <dependency>
         <groupId>org.codehaus.janino</groupId>
