[Backport] Fix test case failure

--- a/pom.xml
+++ b/pom.xml
@@ -1025,6 +1025,10 @@
             <artifactId>jackson-mapper-asl</artifactId>
           </exclusion>
           <exclusion>
+            <groupId>com.codahale.metrics</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+          <exclusion>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
           </exclusion>
