--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>com.tencent.spark</groupId>
   <artifactId>spark-parent_2.12</artifactId>
-  <version>3.0.1-SNAPSHOT</version>
+  <version>3.0.1</version>
   <packaging>pom</packaging>
   <name>Spark Project Parent POM</name>
   <url>http://spark.apache.org/</url>
@@ -82,10 +82,17 @@
   </mailingLists>
 
   <distributionManagement>
+    <!--
     <repository>
       <id>rdm-releases-repo</id>
       <name>Proj Release Repository</name>
       <url>http://maven.oa.com/nexus/content/repositories/releases</url>
+    </repository>
+    -->
+    <repository>
+      <id>teg-tencent-spark</id>
+      <name>tencent Release Repository</name>
+      <url>https://mirrors.tencent.com/repository/maven/tencent_spark_release</url>
     </repository>
 
     <snapshotRepository>
